cargo-features = [ "profile-rustflags" ]

[package]
name = "wordmap"
version = "0.1.0"
edition = "2021"

[profile.release]
rustflags = [ "-C", "no-vectorize-loops", "-C", "no-vectorize-slp" ]

[dependencies]
getrandom = "0.2.8"

[dev-dependencies]
ahash = { version = "0.8.2", features = [ "std" ] }
expect-test = "1.4.0"
fxhash = "0.2.1"
hashbrown = { version = "0.13.2", features = [ "ahash", "raw" ] }
intmap = "2.0.0"
