cargo-features = [ "profile-rustflags" ]

[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
edition = "2021"
license = "Artistic-2.0"
name = "wordmap"
version = "0.3.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[profile.release]
rustflags = [ "-C", "no-vectorize-loops", "-C", "no-vectorize-slp" ]

[dependencies]
getrandom = "0.2.8"

[dev-dependencies]
ahash = { version = "0.8.2", features = [ "std" ] }
expect-test = "1.4.0"
fxhash = "0.2.1"
hashbrown = { version = "0.13.2", features = [ "ahash", "raw" ] }
intmap = "2.0.0"
